--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zuora-compat-country-region-selector",
-  "version": "0.2.2",
+  "version": "0.1",
   "description": "A simple, configurable JS library that add a country dropdown that automatically updates a corresponding region dropdown in your forms.",
   "main": "dist/crs.min.js",
   "scripts": {
@@ -8,18 +8,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wowza-private/zuora-compat-country-region-selector.git"
+    "url": "https://github.com/WowzaMediaSystems/zuora-compat-country-region-selector.git"
   },
   "keywords": [
     "countries",
     "regions",
     "dropdowns"
   ],
-  "author": "Ben Keen",
+  "author": "Wowza Media Systems, LLC",
   "license": "MIT",
   "readmeFilename": "README.md",
   "bugs": {
-    "url": "https://github.com/wowza-private/zuora-compat-country-region-selector/issues"
+    "url": "https://github.com/WowzaMediaSystems/zuora-compat-country-region-selector/issues"
   },
   "devDependencies": {
     "grunt": "1.0.3",
